fixed the alignment. All main section is properly in the center. Don't put a class in the tag that creates the image link or button

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body    {
 .nav-container  {
     display: flex;
     justify-content: space-between;
+    background-color: yellow;
 }
 
 .top-left-links {
@@ -16,12 +17,25 @@ body    {
 }
 
 .main-container {
-    display: flex;
-    flex-direction: column;
+    background-color: grey;
 }
 
-/*.google-image   {
+.google-image {
     display: flex;
     justify-content: center;
+    /*width: 250px;*/
+    background-color: blue;
 }
-*/
+
+.search-bar {
+    display: flex;
+    justify-content: center;
+    /*width: 500px;*/
+    background-color: green;
+}
+
+.additional-buttons {
+    display: flex;
+    justify-content: center;
+    background-color: red;
+}
